--- a/proyectos_activos.html
+++ b/proyectos_activos.html
@@ -12,13 +12,13 @@
         <div class="logo">
             <img src="logo.png" alt="Logo de la empresa">
         </div>
-        <div class="counter">
+        <!--<div class="counter">
             <p>Contador de Ingresos: <span id="contador">0</span></p>
         </div>
         <div class="redes-sociales">
             <a href="https://www.facebook.com"><img src="facebook.png" alt="Facebook"></a>
             <a href="https://www.twitter.com"><img src="twitter.png" alt="Twitter"></a>
-        </div>
+        </div>-->
     </header>
 
     <nav>
