--- a/informacion.html
+++ b/informacion.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo de la empresa">
+            <img src="logo.png" alt="Desarollador de videojuegos">
         </div>
         <!--<div class="counter">
             <p>Contador de Ingresos: <span id="contador">0</span></p>
