--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="proyectos_activos.html">Proyectos Activos</a></li>
-            <li><a href="proyectos_terminados.html">Proyectos Finalizados</a></li>
-            <li><a href="informacion.html">Información</a></li>
-        </ul>
+        <a href="index.html">Inicio</a>
+        <a href="proyectos_activos.html">Desarrollo</a>
+        <a href="proyectos_terminados.html">Finalizado</a>
+        <a href="informacion.html">Información</a>
+        <span></span>
     </nav>
 
     <div class="contenido">
