--- a/informacion.html
+++ b/informacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Información - Mi Sitio Web</title>
+    <title>Información - Isray Mond</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,18 +21,17 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="proyectos_activos.html">Proyectos Activos</a></li>
-            <li><a href="proyectos_terminados.html">Proyectos Finalizados</a></li>
-            <li><a href="informacion.html">Información</a></li>
-        </ul>
+        <a href="index.html">Inicio</a>
+        <a href="proyectos_activos.html">Desarrollo</a>
+        <a href="proyectos_terminados.html">Finalizado</a>
+        <a href="informacion.html">Información</a>
+        <span></span>
     </nav>
 
     <div class="contenido">
         <h2>Información</h2>
         <div class="texto">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed blandit massa vel mauris sollicitudin dignissim.</p>
+            <p>Proximamene</p>
         </div>
         <div class="imagen">
             <img src="informacion.png" alt="Información">
