--- a/proyectos_activos.html
+++ b/proyectos_activos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos Activos - Mi Sitio Web</title>
+    <title>Proyectos Activos - Isray Mond</title>
     <link rel="stylesheet" href="styles.css">
     <script src="ventanaEmergente.js"></script>
 </head>
@@ -22,18 +22,17 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="proyectos_activos.html">Proyectos Activos</a></li>
-            <li><a href="proyectos_terminados.html">Proyectos Finalizados</a></li>
-            <li><a href="informacion.html">Información</a></li>
-        </ul>
+        <a href="index.html">Inicio</a>
+        <a href="proyectos_activos.html">Desarrollo</a>
+        <a href="proyectos_terminados.html">Finalizado</a>
+        <a href="informacion.html">Información</a>
+        <span></span>
     </nav>
 
     <div class="contenido">
         <h2>Proyectos Activos</h2>
         <div class="proyecto">
-            <img src="proyecto1.png" alt="Huga Remake">
+            <img src="Proyectos.png" alt="Huga Remake">
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
@@ -42,8 +41,8 @@
                     cuando de pronto un volcán cercano comienza a hacer erupción, al darse cuenta del peligro<br>
                     en el que se encontraba comienza a correr por su vida esquivando a cada animal frenético <br>
                     que se le cruce en su camino.<br><br><br></p>
-                <img src="imagen1.png" alt="Imagen 1">
-                <img src="imagen2.png" alt="Imagen 2">
+                <img src="imagens.png" alt="Imagen 1">
+                <img src="imagens.png" alt="Imagen 2">
                 <video controls>
                     <source src="video.mp4" type="video/mp4">
                     Tu navegador no soporta el elemento de video.
@@ -52,7 +51,7 @@
         </div>
         
         <div class="proyecto">
-            <img src="proyecto2.png" alt="FPS">
+            <img src="Proyectos.png" alt="FPS">
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
@@ -67,7 +66,7 @@
             </div>
         </div>
         <div class="proyecto">
-            <img src="proyecto3.png" alt="Midnight Assault">
+            <img src="proyectos.png" alt="Midnight Assault">
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
@@ -82,7 +81,7 @@
             </div>
         </div>
         <div class="proyecto">
-            <img src="proyecto4.png" alt="Teyolia ixpuxtequi">
+            <img src="Proyectos.png" alt="Teyolia ixpuxtequi">
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
