--- a/proyectos_terminados.html
+++ b/proyectos_terminados.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos Terminados - Mi Sitio Web</title>
+    <title>Proyectos Terminados - Isray Mond</title>
     <link rel="stylesheet" href="styles.css">
     <script src="ventanaEmergente.js"></script>
 </head>
@@ -22,18 +22,17 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="proyectos_activos.html">Proyectos Activos</a></li>
-            <li><a href="proyectos_terminados.html">Proyectos Finalizados</a></li>
-            <li><a href="informacion.html">Información</a></li>
-        </ul>
+        <a href="index.html">Inicio</a>
+        <a href="proyectos_activos.html">Desarrollo</a>
+        <a href="proyectos_terminados.html">Finalizado</a>
+        <a href="informacion.html">Información</a>
+        <span></span>
     </nav>
 
     <div class="contenido">
         <h2>Proyectos Terminados</h2>
         <div class="proyecto">
-            <img src="proyecto0.png" alt="Huga Bugga">
+            <img src="HugaBugga.png" alt="Huga Bugga">
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
