--- a/proyectos_terminados.html
+++ b/proyectos_terminados.html
@@ -36,8 +36,9 @@
             <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
             <div id="ventanaEmergente" class="ventana-emergente">
                 <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
-                <h2>Introducción al Proyecto 1</h2>
-                <p>Una breve introducción al proyecto.</p>
+                <h2>HugaBugga</h2>
+                <p>La aventura de un cavernícola que trata de sovrevivir al fin de su mundo.</p>
+                <p>Juego tipo endlessrunner.</p>
                 <img src="imagen1.png" alt="Imagen 1">
                 <img src="imagen2.png" alt="Imagen 2">
                 <video controls>
