Cambio al estilo

--- a/proyectos_terminados.html
+++ b/proyectos_terminados.html
@@ -30,23 +30,20 @@
     </nav>
 
     <div class="contenido">
-        <h2>Proyectos Terminados</h2>
-        <div class="proyecto">
-            <img src="HugaBugga.png" alt="Huga Bugga">
-            <button onclick="mostrarVentanaEmergente()">Ver Detalles</button>
-            <div id="ventanaEmergente" class="ventana-emergente">
-                <span onclick="cerrarVentanaEmergente()" class="cerrar">&times;</span>
-                <h2>HugaBugga</h2>
-                <p>La aventura de un cavernícola que trata de sovrevivir al fin de su mundo.</p>
-                <p>Juego tipo endlessrunner.</p>
-                <img src="imagen1.png" alt="Imagen 1">
-                <img src="imagen2.png" alt="Imagen 2">
-                <video controls>
-                    <source src="video.mp4" type="video/mp4">
-                    Tu navegador no soporta el elemento de video.
-                </video>
+        <h2>Proyectos Activos</h2>
+        <div class="carrusel">
+          <div class="proyecto">
+            <img src="Proyectos.png" alt="Huga Remake">
+            <div class="overlay">
+              <h3>Endless Runner 2D</h3>
+              <p>Corre por tu vida tras una erupción volcánica.</p>
+              <video controls>
+                <source src="video.mp4" type="video/mp4">
+              </video>
             </div>
+          </div>
         </div>
+      </div>
 
 
     <!-- <footer>
