Se corrige y agrega imagen en proyectos

--- a/proyectos_activos.html
+++ b/proyectos_activos.html
@@ -48,10 +48,10 @@
             </div>
       
             <div class="proyecto">
-              <img src="Proyectos.png" alt="FPS">
+              <img src="Apoptosis.png" alt="FPS">
               <div class="overlay">
-                <h3>FPS Experimental</h3>
-                <p>Prototipo de shooter en primera persona.</p>
+                <h3>Apostosis</h3>
+                <p>Extermina a los intrusos que osaron a entrar en el cuerpo humano.</p>
                 <img src="imagen1.png" alt="Gameplay" />
               </div>
             </div>
@@ -66,9 +66,9 @@
             </div>
       
             <div class="proyecto">
-              <img src="Proyectos.png" alt="Teyolia ixpuxtequi">
+              <img src="Proyectos.png" alt="Paro">
               <div class="overlay">
-                <h3>Teyolia Ixpuxtequi</h3>
+                <h3>Paro</h3>
                 <p>Juego inspirado en la mitología mexica.</p>
                 <img src="imagen1.png" alt="Arte del juego" />
               </div>
