--- a/proyectos_terminados.html
+++ b/proyectos_terminados.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="contenido">
-        <h2>Proyectos Activos</h2>
+        <h2>Proyectos Finalizados</h2>
         <div class="carrusel">
           <div class="proyecto">
             <img src="Proyectos.png" alt="Huga Remake">
