Cambios de imagen y prueba de link

--- a/proyectos_activos.html
+++ b/proyectos_activos.html
@@ -37,10 +37,10 @@
           <button class="flecha izquierda" onclick="scrollCarrusel(-1)">&#10094;</button>
           <div class="carrusel" id="carrusel">
             <div class="proyecto">
-              <img src="Proyectos.png" alt="Huga Remake">
+              <img src="Huga Remake.png" alt="Huga Remake">
               <div class="overlay">
                 <h3>Endless Runner 2D</h3>
-                <p>Corre por tu vida tras una erupción volcánica.</p>
+                <p>Aventura remasterizada de nuestro cavernícola favorito.</p>
                 <video controls>
                   <source src="video.mp4" type="video/mp4" />
                 </video>
@@ -51,7 +51,7 @@
               <img src="Apoptosis.png" alt="FPS">
               <div class="overlay">
                 <h3>Apostosis</h3>
-                <p>Extermina a los intrusos que osaron a entrar en el cuerpo humano.</p>
+                <p>Extermina a los intrusos que osaron a entrar en el cuerpo humano. https://catseni.itch.io/apostosisgj</p>
                 <img src="imagen1.png" alt="Gameplay" />
               </div>
             </div>
