--- a/proyectos_terminados.html
+++ b/proyectos_terminados.html
@@ -33,10 +33,10 @@
         <h2>Proyectos Finalizados</h2>
         <div class="carrusel">
           <div class="proyecto">
-            <img src="Proyectos.png" alt="Huga Remake">
+            <img src="HugaBugga.png" alt="Huga Remake">
             <div class="overlay">
               <h3>Endless Runner 2D</h3>
-              <p>Corre por tu vida tras una erupción volcánica.</p>
+              <p>Corre por tu vida y salvate de una erupción volcánica.</p>
               <video controls>
                 <source src="video.mp4" type="video/mp4">
               </video>
